--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	</p>
 	<p>
 	<nav>
+	<button class= "button" type="button">Reset Game</button>
+	<!--<input type="button" class="button" value="Reset Game" onclick="window.location.reload()">-->
 	<a href="#instructions" class="gamelinks">Instructions</a>
 	<a href="#" class="gamelinks">Game</a>
 	</nav>
